# qirust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: helper.rs  lib.rs  qr_lib.rs  qrcode.rs
