[package]
name = "qirust"
version = "0.1.10"
edition = "2021"
description = "A simple QR code generator written in Rust using standard library."
repository = "https://github.com/ashaffah/qirust.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.6"
