[package]
name = "qirust"
version = "0.1.28"
edition = "2021"
description = "A simple QR code generator written in Rust using standard library."
repository = "https://github.com/ashaffah/qirust.git"
license = "MIT"
documentation = "https://docs.rs/qirust"
keywords = ["qrcode", "barcode", "image", "rust"]
categories = ["graphics", "encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.6"

[package.metadata.docs.rs]
all-features = true
